# game-spellbound

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AnimationController.hpp  Camera.hpp  Enemy.hpp  EnemyGenerator.hpp  GameState.hpp  GameWorld.hpp  Inventory.hpp  Mob.hpp  Other.hpp  Player.hpp  Projectile.hpp  ResourceManager.hpp  SceneManager.hpp  Tilemap.hpp  UI.hpp  World.hpp  WorldGenerator.hpp
saves/: game_world.json  player.json  settings.json
src/core/: AnimationController.cpp  AnimationController.hpp  Camera.cpp  Camera.hpp  Generator.cpp  Generator.hpp  Music.cpp  Music.hpp  Raycast.cpp  Raycast.hpp  ResourceManager.cpp  ResourceManager.hpp  SaveLoaderManager.cpp  SaveLoaderManager.hpp  SaveSystem.cpp  SaveSystem.hpp  SettingsManager.cpp  SettingsManager.hpp  Sound.cpp  Sound.hpp  StringFormat.cpp  StringFormat.hpp  TransformAnimation.cpp  TransformAnimation.hpp  UI.cpp  UI.hpp  Utiils.cpp  Utils.cpp  Utils.hpp
src/core/Audio/: MusicManager.cpp  MusicManager.hpp  SoundManager.cpp  SoundManager.hpp
src/core/UI/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  HUD.cpp  HUD.hpp  Image.cpp  Image.hpp  Slider.cpp  Slider.hpp  Text.cpp  Text.hpp  UIObject.cpp  UIObject.hpp
src/entities/enemy/: Enemy.cpp  Enemy.hpp  EnemyFactory.cpp  EnemyFactory.hpp  Goblin.cpp  Goblin.hpp  Ogre.cpp  Ogre.hpp  Rat.cpp  Rat.hpp  Shaman.cpp  Shaman.hpp
src/entities/mob/: Mob.cpp  Mob.hpp  MobCollision.cpp  MobCollision.hpp  Projectile.cpp  Projectile.hpp
src/entities/mob/buffs/: BuffItem.cpp  BuffItem.hpp  BuffSystem.cpp  BuffSystem.hpp  StatModifier.cpp  StatModifier.hpp  StatSet.cpp  StatSet.hpp  StatsBuilder.cpp  StatsBuilder.hpp
src/entities/player/: Archer.cpp  Archer.hpp  Knight.cpp  Knight.hpp  Mage.cpp  Mage.hpp  Player.cpp  Player.hpp  PlayerFactory.cpp  PlayerFactory.hpp
src/generators/: BuffsGenerator.cpp  BuffsGenerator.hpp  EnemyGenerator.cpp  EnemyGenerator.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/scenes/: CharacterSelectScene.cpp  CharacterSelectScene.hpp  GameLevelScene.cpp  GameLevelScene.hpp  MenuScene.cpp  MenuScene.hpp  PauseScene.cpp  PauseScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SettingsScene.cpp  SettingsScene.hpp
src/world/: GameWorld.cpp  GameWorld.hpp  Tilemap.cpp  Tilemap.hpp
